[gd_scene load_steps=21 format=2]

[ext_resource path="res://resources/Home Education DEMO.otf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/background.png" type="Texture" id=2]
[ext_resource path="res://resources/bottone.png" type="Texture" id=3]
[ext_resource path="res://quiz3/Continue.gd" type="Script" id=4]
[ext_resource path="res://quiz2/Retry.gd" type="Script" id=5]
[ext_resource path="res://quiz3/Options.gd" type="Script" id=6]
[ext_resource path="res://resources/cervello_02_thinking.png" type="Texture" id=7]
[ext_resource path="res://resources/cervello_03_wrong.png" type="Texture" id=8]
[ext_resource path="res://resources/panel.png" type="Texture" id=9]
[ext_resource path="res://resources/brain.png" type="Texture" id=10]
[ext_resource path="res://resources/cervello_04_correct.png" type="Texture" id=11]
[ext_resource path="res://quiz3/Answer.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 500
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="PanelQuiz" type="Sprite" parent="background"]
position = Vector2( 1268.65, 525.521 )
scale = Vector2( 0.884574, 1.09011 )
z_as_relative = false
texture = ExtResource( 9 )

[node name="QuizText" type="RichTextLabel" parent="background/PanelQuiz"]
margin_left = -608.0
margin_top = -226.599
margin_right = 563.0
margin_bottom = -85.5989
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "seleziona la carta B e C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuizTitle" type="RichTextLabel" parent="background/PanelQuiz"]
margin_left = -145.0
margin_top = -401.134
margin_right = 192.0
margin_bottom = -205.134
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "QUIZ 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node" parent="background/PanelQuiz"]
script = ExtResource( 6 )

[node name="Card1" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = 700.048
margin_top = 432.209
margin_right = 2086.05
margin_bottom = 1323.21
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card1"]
margin_left = 595.969
margin_top = 111.587
margin_right = 781.969
margin_bottom = 1842.59
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "A

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = 977.248
margin_top = 432.209
margin_right = 2363.25
margin_bottom = 1323.21
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card2"]
margin_left = 595.969
margin_top = 111.587
margin_right = 781.969
margin_bottom = 1842.59
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "B

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card3" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = 1254.45
margin_top = 432.209
margin_right = 2640.45
margin_bottom = 1323.21
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card3"]
margin_left = 595.969
margin_top = 111.587
margin_right = 781.969
margin_bottom = 1842.59
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "C

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card4" type="TextureButton" parent="background/PanelQuiz/Options"]
margin_left = 1531.65
margin_top = 432.209
margin_right = 2917.65
margin_bottom = 1323.21
rect_scale = Vector2( 0.2, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Options/Card4"]
margin_left = 595.969
margin_top = 111.587
margin_right = 781.969
margin_bottom = 1842.59
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "D

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer" type="Button" parent="background/PanelQuiz"]
margin_left = -152.625
margin_top = 261.056
margin_right = 257.375
margin_bottom = 395.056
rect_scale = Vector2( 0.7, 0.7 )
disabled = true
icon = ExtResource( 3 )
flat = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PanelQuiz/Answer"]
margin_left = 76.6459
margin_right = 374.646
margin_bottom = 115.0
rect_clip_content = true
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "rispondi"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PanelMap" type="Sprite" parent="background"]
position = Vector2( 359.634, 331.788 )
scale = Vector2( 0.396567, 0.578445 )
texture = ExtResource( 9 )

[node name="Map" type="Sprite" parent="background/PanelMap"]
position = Vector2( 4.24097, 0.665161 )
scale = Vector2( 0.882712, 0.710061 )
z_index = 1
texture = ExtResource( 10 )

[node name="BrainSprites" type="Node" parent="background"]

[node name="brain_thinking" type="Sprite" parent="background/BrainSprites"]
position = Vector2( 385.542, 871.384 )
texture = ExtResource( 7 )

[node name="brain_wrong" type="Sprite" parent="background/BrainSprites"]
visible = false
position = Vector2( 390.767, 867.393 )
texture = ExtResource( 8 )

[node name="brain_correct" type="Sprite" parent="background/BrainSprites"]
visible = false
position = Vector2( 413.445, 877.473 )
texture = ExtResource( 11 )

[node name="PanelWrong" type="Sprite" parent="."]
visible = false
position = Vector2( 1102.15, 457.685 )
scale = Vector2( 0.709909, 0.725538 )
z_index = 1
texture = ExtResource( 9 )

[node name="WrongTitle" type="RichTextLabel" parent="PanelWrong"]
margin_left = -480.679
margin_top = -343.0
margin_right = 517.321
margin_bottom = -139.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "risposta sbagliata!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="RichTextLabel" parent="PanelWrong"]
margin_left = -591.085
margin_top = -139.0
margin_right = -61.085
margin_bottom = -1.99997
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "hint: blablabla"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="PanelWrong"]
margin_left = -226.441
margin_top = 159.942
margin_right = 183.559
margin_bottom = 293.942
icon = ExtResource( 3 )
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelWrong/Retry"]
margin_left = 63.9635
margin_top = 19.3248
margin_right = 373.964
margin_bottom = 134.325
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sbagliato"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PanelCorrect" type="Sprite" parent="."]
visible = false
position = Vector2( 1102.15, 457.685 )
scale = Vector2( 0.709909, 0.725538 )
z_index = 1
texture = ExtResource( 9 )

[node name="CorrectTitle" type="RichTextLabel" parent="PanelCorrect"]
margin_left = -431.321
margin_top = -343.0
margin_right = 495.679
margin_bottom = -139.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Risposta esatta!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectText" type="RichTextLabel" parent="PanelCorrect"]
margin_left = -591.0
margin_top = -139.0
margin_right = 396.0
margin_bottom = -2.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Lo sapevi che blablabla?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="PanelCorrect"]
margin_left = -226.441
margin_top = 159.942
margin_right = 183.559
margin_bottom = 293.942
icon = ExtResource( 3 )
flat = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelCorrect/Continue"]
margin_left = 63.9635
margin_top = 6.89148
margin_right = 349.964
margin_bottom = 121.891
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Continua"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="background/PanelQuiz/Options/Card1" to="background/PanelQuiz/Options" method="_on_Card1_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card2" to="background/PanelQuiz/Options" method="_on_Card2_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card3" to="background/PanelQuiz/Options" method="_on_Card3_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Options/Card4" to="background/PanelQuiz/Options" method="_on_Card4_pressed"]
[connection signal="pressed" from="background/PanelQuiz/Answer" to="background/PanelQuiz/Answer" method="_on_Answer_pressed"]
[connection signal="pressed" from="PanelWrong/Retry" to="PanelWrong/Retry" method="_on_Retry_pressed"]
[connection signal="pressed" from="PanelCorrect/Continue" to="PanelCorrect/Continue" method="_on_Continue_pressed"]
